@@ -16,6 +16,7 @@ Version 0.4o
 * Added a lot of pregnancy triggers (including stuff for mpreg). Holler if you find a scene which you feel should trigger an impregnation but doesn't, report it
 * Restricted the effects of Testos. If you are pregnant, that womb cannot be removed by the TF
 * Added Cassidy the weapon shop owner to Rigard, written by The Observer.
+* Added initial talks + talk menu to Orchid. A work in progress. Written by LukaDoc and sponsored by Patreon
 
 --------------------------------------------
              PREVIOUS VERSIONS
